# XCode_Gtest-in-Cmake

./: .gitignore  CMakeLists.txt  README.md
product/Debug/: libtestlibrary.dylib
src/: CMakeLists.txt  sample.h  sample1.h
test/: CMakeLists.txt  sample1_unittest.cc
